welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:15: error: value diag is not a member of Unit
possible cause: maybe a semicolon is missing before `value diag'?
  } diag = diag + 1
    ^